--- a/CarrinhoDeComprasApi/src/main/resources/messages.properties
+++ b/CarrinhoDeComprasApi/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 # Error messages.
 mensagem.erro.usuario.inexistente=Usuário não encontrado.
+mensagem.erro.usuario.existente=Usuário já cadastrado.
 mensagem.erro.item.inexistente=Item não encontrado.
